<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="tab_title_movie">Movie</string>
    <string name="tab_title_tvshow">TV Show</string>
    <string name="tab_title_favorite">Favorite</string>
    <string name="title_movie_tab">Now Playing Movies</string>
    <string name="title_tvshow_tab">Top Rated TV Show</string>
    <string name="title_favorite_tab">Favorite</string>

    <string name="title_toolbar_detail">Detail</string>
    <string name="colon">:</string>
    <string name="label_runtime">Runtime</string>
    <string name="label_director">Director</string>
    <string name="label_creator">Creator</string>
    <string name="label_genre">Genre</string>
    <string name="label_release_date">Release date : </string>
    <string name="label_first_air_date">First air date : </string>
    <string name="title_synopsis">Overview</string>
    <string name="empty_data">-</string>

    <!-- Preferences -->
    <string name="change_language_title">Change Language</string>
    <string name="advanced_section_pref">Advanced</string>
    <string name="notification_section_pref">Notification</string>
    <string name="app_reminder_title_pref">Daily app reminder</string>
    <string name="app_reminder_summary_pref">Get notifications every day to remind you to open the app</string>
    <string name="movie_release_reminder_title_pref">Daily movie release reminder</string>
    <string name="movie_release_reminder_summary_pref">Get notifications to get movies released every day</string>

    <!-- Dummy Data-->
    <string name="dummyGenre">Drama, Thriller, Action, Science Fiction, Horror</string>
    <string name="dummyTitle">Movie or TV Show Title</string>
    <string name="dummyDesc">Movie or TV Show Description</string>
    <string name="dummyRuntime">1h 20m</string>
    <string name="dummyDirector">Jack Steven sadasd dasd sad adasd</string>

    <!-- Empty State -->
    <string name="empty_state_desc_no_conn">Please check your internet connection</string>
    <string name="empty_state_btn_reconnect">Reconnect</string>
    <string name="empty_state_title_no_conn">No internet connection</string>
    <string name="empty_state_desc_error_page">Page not found</string>
    <string name="empty_state_title_error_page">Oops, something went wrong</string>
    <string name="empty_state_title_no_favorite_item">No favorites yet.</string>
    <string name="empty_state_desc_no_favorite_item_movie">You don\'t have a list of favorite movies</string>
    <string name="empty_state_desc_no_favorite_item_tvshow">You don\'t have a list of favorite tv show</string>
    <string name="empty_state_title_not_found">No result found</string>
    <string name="empty_state_desc_not_found">Try another keywords</string>

    <!-- Time -->
    <string name="minutes">m</string>
    <string name="hours">h</string>
    <string name="backdrop_image">Backdrop Image</string>
    <string name="minutess">%dm</string>

    <!-- Preference key -->
    <string name="key_reminder">key_reminder</string>
    <string name="key_movie_release_reminder">movie_release_reminder</string>
    <string name="key_language">language</string>

    <!-- Favorite -->
    <string name="toast_added_to_favorite">%s added to favorite</string>

    <!-- Search Hint -->
    <string name="hint_search_movie">Search Movie</string>
    <string name="hint_search_tvshow">Search TV Show</string>

    <!-- Etc -->
    <string name="favorite_movie_widget_title">Favorite Movie</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_settings">Settings</string>
    <string name="movie_favorite_poster_widget_desc">Movie Favorite Poster</string>

    <!-- Reminder -->
    <string name="notif_title_daily_app_reminder">Comeback to movie catalog</string>
    <string name="message_daily_app_reminder">Don\'t miss the latest movie and tv show</string>
    <string name="notif_title_movie_release_reminder">Movie Release Today</string>


</resources>
