<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dimension_20dp">

    <ImageView
        android:id="@+id/img_empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/empty_state_title_no_conn"
        android:src="@drawable/ic_empty_state_no_connection" />

    <TextView
        android:id="@+id/title_empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/empty_state_title_no_conn"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc_empty_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_state_desc_no_conn"
        android:textAlignment="center"
        android:textColor="#494848"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_reconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="@string/empty_state_btn_reconnect"
        android:textColor="#fff"
        android:textSize="14sp"
        android:textStyle="bold" />


</LinearLayout>